--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
   "author": "niteshMishra",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.0",
+    "cookie-parser": "^1.4.6",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
     "mongoose": "^6.3.4",
+    "multer": "^1.4.4",
+    "node-fetch": "2.0",
     "nodemon": "^2.0.16"
   }
 }
