--- a/package.json
+++ b/package.json
@@ -9,13 +9,17 @@
   "author": "niteshMishra",
   "license": "ISC",
   "dependencies": {
+    "assert": "^2.0.0",
     "body-parser": "^1.20.0",
+    "connect-mongo": "^4.6.0",
     "cookie-parser": "^1.4.6",
+    "csv-parser": "^3.0.0",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
+    "fs": "^0.0.1-security",
     "mongoose": "^6.3.4",
     "multer": "^1.4.4",
-    "node-fetch": "2.0",
+    "node-fetch": "^2.6.7",
     "nodemon": "^2.0.16"
   }
 }
